# cookiecutter-rt-pkg

./: LICENSE  README.md  SECURITY.md  cookiecutter.json  noxfile.py  pyproject.toml
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: # COOKIECUTTER{% if cookiecutter.build_docker_image == "y" %}.dockerignore# COOKIECUTTER{% endif %}  # COOKIECUTTER{% if cookiecutter.build_docker_image == "y" %}Dockerfile# COOKIECUTTER{% endif %}  # COOKIECUTTER{% if cookiecutter.docker_image == "y" %}Dockerfile# COOKIECUTTER{% endif %}  .gitignore  .gitlint  README.md  noxfile.py  pyproject.toml
{{cookiecutter.package_name}}/.github/: dependabot.yml
{{cookiecutter.package_name}}/.github/actions/generate-changelog/: action.yml
{{cookiecutter.package_name}}/.github/actions/publish-docker/: action.yml
{{cookiecutter.package_name}}/.github/actions/publish-github-release/: action.yml  changelog_to_markdown.py
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  publish.yml  release.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/_internal/: __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/v0/: __init__.py
{{cookiecutter.package_name}}/tests/: apiver_fixtures.py  conftest.py  django_fixtures.py
{{cookiecutter.package_name}}/tests/unit/api/: test_setup.py
{{cookiecutter.repository_name}}/: noxfile.py  pyproject.toml
{{cookiecutter.repository_name}}/.github/: dependabot.yml
{{cookiecutter.repostory_name}}/: noxfile.py  pyproject.toml
{{cookiecutter.repostory_name}}/.github/: dependabot.yml
{{cookiecutter.repostory_name}}/.github/workflows/: ci.yml
