[project]
name = "cookiecutter-rt-pkg"
description = "RT pkg template - don't install try to install this as package, use it as cruft template"
version = "0"
license = {file = "LICENSE"}
authors = [
    {name = "Reef Technologies", email = "opensource@reef.pl"},
]
requires-python = ">=3.11"

dependencies = [
    "codespell",
    "cruft",
    "nox",
    "ruff",
]

[tool.ruff]
line-length = 120
exclude = [
    "\\{\\{cookiecutter.package_name\\}\\}",
]

[tool.ruff.lint]
select = [
    "D",
    "E", "F", "I", "UP",
    "TCH005",
]
ignore = [
    "E501",  # checked&fixed by ruff format
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102", "D103", "D104", # TODO remove once we have docstring for all public methods
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]

[tool.codespell]
skip = "*.min.js,uv.lock"
ignore-words-list = "datas"

[tool.towncrier]
directory = "changelog.d"
filename = "\\{\\{cookiecutter.repostory_name\\}\\}/docs/3rd_party/cookiecutter-rt-pkg/CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/reef-technologies/cookiecutter-rt-pkg/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/reef-technologies/cookiecutter-rt-pkg/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "nox",
    "pytest",
]
ignore_missing_imports = true
