[project]
name = "{{cookiecutter.package_name.replace('_', '-')}}"
requires-python = ">=3.11"
keywords = []
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Reef Technologies", email = "opensource@reef.pl"},
]
classifiers = [
# COOKIECUTTER{%- if cookiecutter.is_django_package == "y" %}
    "Framework :: Django",
    "Framework :: Django :: 4.2",
# COOKIECUTTER{%- endif %}
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
]

[project.urls]
"Source" = "{{cookiecutter.repository_github_url}}"
"Issue Tracker" = "{{cookiecutter.repository_github_url}}/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"


[tool.hatch.build.hooks.vcs]
version-file = "src/{{cookiecutter.package_name}}/_version.py"

[dependency-groups]
test = [
    "freezegun",
    "pytest",
    "pytest-apiver",
    "pytest-asyncio",
# COOKIECUTTER{%- if cookiecutter.is_django_package == "y" %}
    "pytest-django",
# COOKIECUTTER{%- endif %}
    "pytest-xdist",
]
lint = [
    "codespell[toml]",
# COOKIECUTTER{%- if cookiecutter.is_django_package == "y" %}
    "django-stubs>=1.12.0",
# COOKIECUTTER{%- endif %}
    "mypy>=1.8",
    "ruff",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]
[tool.pytest.ini_options]
pythonpath = ["."]  # allow for `import tests` in test files
target_package_name = "{{cookiecutter.package_name}}"  # required by pytest-apiver

# COOKIECUTTER{%- if cookiecutter.is_django_package == "y" %}
DJANGO_SETTINGS_MODULE="tests.settings"
# COOKIECUTTER{%- endif %}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "D",
    "E", "F", "I", "UP",
    "TCH005",
]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102", "D103", "D104", # TODO remove once we have docstring for all public methods
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]

[tool.codespell]
skip = "*.min.js,uv.lock"
ignore-words-list = "datas"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "nox",
    "pytest",
    "tests.*",
]
ignore_missing_imports = true

[tool.commitizen]
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true
